renamed converter.html to index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta property="og:description" content="Convert your sensitivites between all of your favourite games and DPI values!">
         <!-- <meta property="og:site_name" content="converter"> -->
         <meta property="og:image" content="https://austinolig.github.io/images/icon_sosic_bg.jpg">
-        <meta property="og:url" content="https://austinolig.github.io/converter.html">
+        <meta property="og:url" content="https://austinolig.github.io/index.html">
         <meta name="theme-color" content="#ff4655">
         <link rel="apple-touch-icon" href="images/icon_sosic_bg.jpg">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
