--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta property="og:title" content="soSic's Sensitivity Converter">
-        <meta property="og:description" content="Convert your sensitivites between all of your favourite games and DPI values!">
+        <meta property="og:title" content="Sens Swap">
+        <meta property="og:description" content="soSic's Sensitivity Converter. Convert your sensitivites between all of your favourite games and DPI values!">
         <!-- <meta property="og:site_name" content="converter"> -->
         <meta property="og:image" content="https://austinolig.github.io/images/icon_sosic_bg.jpg">
         <meta property="og:url" content="https://austinolig.github.io/index.html">
@@ -16,7 +16,7 @@
         <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
         <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script defer src="js/converter.js"></script>
-        <title>Sensitivity Converter</title>
+        <title>Sens Swap</title>
     </head>
     <body class="site-body">
         <section class="section site-content">
@@ -28,7 +28,7 @@
                         </figure>
                     </div>
                     <div class="column is-narrow">
-                        <h1 class="title">Sensitivity Converter</h1>
+                        <h1 class="title">Sens Swap</h1>
                         <p class="subtitle">by soSic</p>
                     </div>
                 </div>
